<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/blue">


    <TextView
            android:text="@string/welcome_to_our_online_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/landTxt" android:textStyle="italic"
            android:textSize="30sp" android:textAlignment="center" android:gravity="center"
            android:layout_centerInParent="false" android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" android:textColor="#fff" android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" android:layout_marginBottom="30dp"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login" android:layout_centerInParent="true" android:layout_below="@+id/textView"
            android:layout_marginTop="15dp" android:layout_marginBottom="15dp" android:padding="8dp"
            android:onClick="login" android:background="@drawable/buttons"/>
    <TextView
            android:text="@string/or"
            android:layout_width="200dp"
            android:layout_height="wrap_content" android:id="@+id/textView" android:layout_below="@+id/register"
            android:textAlignment="center" android:textSize="24sp" android:layout_centerInParent="true"
            android:textColor="#fff"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register" android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" android:padding="8dp" android:layout_centerInParent="true"
            android:layout_below="@+id/landTxt" android:onClick="register" android:background="@drawable/buttons"/>


</RelativeLayout>