<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <tcking.github.com.giraffeplayer2.VideoView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/lesson_video"
            android:elevation="50dp" android:layout_marginTop="20dp" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
    ></tcking.github.com.giraffeplayer2.VideoView>

    <LinearLayout
            android:layout_below="@id/lesson_video"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_margin="15dp">


        <TextView
                android:text="@string/video_title"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_margin="15dp" android:id="@+id/video_title"/>

        <TextView
                android:text="@string/video_desc"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_margin="15dp" android:padding="5dp"
                android:id="@+id/video_desc"/>
        <Button
                android:text="@string/upload_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/uploadBtn" android:layout_margin="5dp"
                android:background="@drawable/buttons" android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>